# grand-pattern-cuda

./: .gitignore  AGENT.md  CMakeLists.txt  Makefile  README.md
include/: grand_pattern_cuda.h
src/: grand_pattern_cuda.cu  kernels.cu  kernels.h  main.cu  tests.cu
tests/: test_grand_pattern_cuda.cu
